Basic Solution Filter for Part of Speech & Pickle of POS-Tagged Games#

--- a/pos-gen-by-classifier.ipynb
+++ b/pos-gen-by-classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "path = 'C:/Users/stahn/Documents/HTW/Analytics/Aufgabe4/'\n",
+    "path = '/Users/juliusstahnke/Documents/HTW/Analytics/Analytics/Aufgabe4/'\n",
     "filename = 'tiger_release_aug07.corrected.16012013.conll09'\n",
     "tiger_corpus = nltk.corpus.ConllCorpusReader(path, filename,['ignore', 'words', 'ignore', 'ignore', 'pos'], encoding='utf-8')\n",
     "tiger_tagged_sents = tiger_corpus.tagged_sents()\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -58,131 +58,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9417383538880661"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tagger.evaluate(test_sents)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Der',\n",
-       " 'texanische',\n",
-       " 'Milliardär',\n",
-       " 'Ross',\n",
-       " 'Perot',\n",
-       " 'hat',\n",
-       " 'das',\n",
-       " 'politische',\n",
-       " 'Establishment',\n",
-       " 'in',\n",
-       " 'Washington',\n",
-       " 'aufgeschreckt',\n",
-       " '.']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tiger_sents[3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Der', 'ART'),\n",
-       " ('texanische', 'ADJA'),\n",
-       " ('Milliardär', 'NN'),\n",
-       " ('Ross', 'NE'),\n",
-       " ('Perot', 'NE'),\n",
-       " ('hat', 'VAFIN'),\n",
-       " ('das', 'ART'),\n",
-       " ('politische', 'ADJA'),\n",
-       " ('Establishment', 'NN'),\n",
-       " ('in', 'APPR'),\n",
-       " ('Washington', 'NE'),\n",
-       " ('aufgeschreckt', 'VVPP'),\n",
-       " ('.', '$.')]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_sents[3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Der', 'ART'),\n",
-       " ('texanische', 'ADJA'),\n",
-       " ('Milliardär', 'TRUNC'),\n",
-       " ('Ross', 'NE'),\n",
-       " ('Perot', 'NE'),\n",
-       " ('hat', 'VAFIN'),\n",
-       " ('das', 'ART'),\n",
-       " ('politische', 'ADJA'),\n",
-       " ('Establishment', 'NN'),\n",
-       " ('in', 'APPR'),\n",
-       " ('Washington', 'NE'),\n",
-       " ('aufgeschreckt', 'VVPP'),\n",
-       " ('.', '$.')]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tagger.tag(tiger_sents[3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
